Fix flaws in EngineController::canDecode that led to a number of false positives.

EngineController::canDecode was still caching extensions but checking mime types.  This patch resolves this by caching mime types instead.  This also simplifies the code in EngineController::canDecode and allows us to eliminate hacks to work around the issue in other parts of Amarok.  Patch by Jason A. Donenfeld <Jason@zx2c4.com>
BUG: 173333

svn path=/trunk/extragear/multimedia/amarok/; revision=875009